--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+			<version>3.1.0.M1</version>
 		</dependency>
 
 		<dependency>
